Fix text not rendering on iphone due to x-overflow on body

--- a/css/less/theme.less
+++ b/css/less/theme.less
@@ -31,8 +31,11 @@ body {
   z-index:50;
   @media only screen and (max-width : 1224px) {
     padding-top:0;
-    overflow-x:hidden;
   }
+}
+
+.site-wrapper {
+  overflow-x:hidden;
 }
 
 .content {
